--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "node-fetch": "^2.6.0",
+    "node-vibrant": "^3.1.5",
     "unsplash-js": "^6.0.0",
     "validator": "^13.0.0"
   }
