--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,7 +32,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/node-vibrant/dist/vibrant.min.js"
+
+            ]
           },
           "configurations": {
             "production": {
@@ -98,7 +101,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/node-vibrant/dist/vibrant.min.js"
+            ]
           }
         },
         "lint": {
