--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,11 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.4",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
-    "color-thief": "^2.2.5",
     "hammerjs": "^2.0.8",
     "node-vibrant": "^3.1.5",
     "rxjs": "~6.4.0",
