--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
+    "noImplicitAny": true,
     "typeRoots": [
       "node_modules/@types"
     ],
