--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/service-worker": "~8.2.14",
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
+    "angular-google-charts": "^1.1.4",
     "hammerjs": "^2.0.8",
     "node-vibrant": "^3.1.5",
     "rxjs": "~6.4.0",
